--- a/router/templates/thread.html
+++ b/router/templates/thread.html
@@ -15,7 +15,7 @@
         <div class="panel-heading">
             <span class="lead"> <i class="fa fa-comment-o"></i> {{ .thread.Topic }}</span>
             <div class="pull-right">
-              Started by {{ .thread.Owner }} - {{ .thread.CreatedAt }}
+              Started by {{ .thread.Owner }} - {{ .thread.When }}
             </div>
         </div>
 
@@ -23,7 +23,7 @@
         <div class="panel-body">
             <span class="lead"> <i class="fa fa-comment"></i> {{ .Body }}</span>
             <div class="pull-right">
-            {{ .Contributor }} - {{ .CreatedAt }}
+            {{ .Contributor }} - {{ .When }}
             </div>    
         </div>
         {{ end }}
