--- a/router/templates/thread.html
+++ b/router/templates/thread.html
@@ -30,7 +30,7 @@
       
         <input form="post" type="hidden" name="uuid" value="{{ .thread.UuId }}">
         <input form="post" type="hidden" name="id" value="{{ .thread.Id }}">
-        <input form="post" type="hidden" name="token" value="{{ .token }}">
+        <input form="post" type="hidden" name="state" value="{{ .state }}">
 
         {{ .reply }}
       
