--- a/router/templates/login.html
+++ b/router/templates/login.html
@@ -21,6 +21,7 @@
             KEIJIBAN
           </i>
         </h2>
+        <input type="hidden" name="state" value="{{ .state }}">
         <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
         <input type="password" name="password" class="form-control" placeholder="Password" required>
         <br/>
