--- a/router/templates/newthread.html
+++ b/router/templates/newthread.html
@@ -13,6 +13,7 @@
     <div class="container">
       
         <form role="form" action="/thread/create" method="post">
+          <input type="hidden" name="state" value="{{ .state }}">
           <div class="lead">Start a new thread with the following topic</div>
             <div class="form-group">
               <textarea class="form-control" name="topic" id="topic" placeholder="Thread topic here" rows="4"></textarea>
