public session works

--- a/router/templates/index.html
+++ b/router/templates/index.html
@@ -24,7 +24,7 @@
           <div class="panel-body">
             Started by {{ .Owner }} - {{ .When }} - {{ .NumReplies }} posts.
             <div class="pull-right">
-              <a href="/thread/read?id={{.UuId }}">Read more</a>
+              <a href="/thread/read?id={{ .PublicURL }}">Read more</a>
             </div>
           </div>
         </div>
